# books_graphql

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
env/examples/: backend.env.example  postgres.env.example
src/: pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 17c04881a0dd_unique_index_added_to_user_saved_books.py  6f08e3dc5dbd_user_username_field_unique_index.py  d737ad6e0970_books_and_author_model.py  fb721372a2ba_user_model.py
src/backend/: auth.py  db.py  main.py  permissions.py  settings.py
src/backend/commands/: __init__.py  create_authors.py  create_books.py  create_users.py
src/backend/factories/: __init__.py  authors.py  books.py  users.py
src/backend/models/: __init__.py  authors.py  books.py  mixins.py  users.py
src/backend/mutations/: __init__.py  authors.py  books.py  users.py
src/backend/queries/: __init__.py  authors.py  books.py  users.py
src/backend/schemas/: author.py  books.py  users.py
src/backend/services/: __init__.py  authors.py  base.py  books.py  users.py
